CSS fix for weather boost select in dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -90,7 +90,7 @@
 		@apply p-2;
 	}
 	select {
-		@apply dark:bg-gray-800;
+		@apply dark:bg-gray-800 dark:text-white;
 	}
 	.matchup-item {
 		@apply px-2 py-1 text-white my-1;
